# spipp

./: CMakeLists.txt  README.md
CMakeModules/: FindJOREK.cmake  FortranConfig.cmake
fortran/: CMakeLists.txt
fortran/assembly/: CMakeLists.txt  assembly.F90  assembly.rst  assembly_1d_bspline.F90  assembly_def.F90
fortran/basis/: CMakeLists.txt  basis.F90  basis.rst  basis_def.F90  bsplines.F90  fourier.F90  fourier_mods.F90  hbezier.F90
fortran/basis/tests/: CMakeLists.txt  ex1.F90  ex2.F90  ex3.F90
fortran/blackbox/: CMakeLists.txt  blackbox.F90  blackbox.rst  blackbox_bsplines.F90  blackbox_def.F90  blackbox_fourier.F90  blackbox_hbezier.F90
fortran/blackbox/tests/: CMakeLists.txt  ex1.F90
fortran/bspline/: CMakeLists.txt  bspline.F90
fortran/bspline/tests/: CMakeLists.txt  ex1.F90  ex2.F90
fortran/global/: CMakeLists.txt  global.F90  global.rst  global_def.F90
fortran/greenbox/: CMakeLists.txt  greenbox.F90  greenbox.rst  greenbox_def.F90
fortran/greenbox/tests/: CMakeLists.txt  ex1.F90
fortran/linear_solver/: smcg.f90  sparseSolver.f90  sparseSolver_pastix.F90
fortran/matrix/: CMakeLists.txt  matrix.F90  matrix.rst  matrix_def.F90
fortran/matrix/tests/: CMakeLists.txt  ex1.F90
fortran/mesh/: CMakeLists.txt  mesh.F90  mesh_bspline.F90  mesh_def.F90  mesh_transform.F90
fortran/mesh/tests/: CMakeLists.txt  ex1.F90  ex2.F90
fortran/mesh_logical/: CMakeLists.txt  mesh_logical.F90  mesh_logical.rst  mesh_logical_bspline.F90  mesh_logical_def.F90
fortran/mesh_logical/tests/: CMakeLists.txt  ex1.F90
fortran/numbering/: CMakeLists.txt  numbering.F90  numbering.rst  numbering_def.F90
fortran/numbering/tests/: CMakeLists.txt  ex1.F90  test_SparseMatrix.f90
fortran/pppack/: CMakeLists.txt  Makefile  Makefile_py  banfac.F90  banslv.F90  bchslv.F90  bsplvb.F90  bsplvb_vect.F90  bsplvd.F90  bsplvd_vect.F90  bspp2d.F90  bvalue.F90  chol1d.F90  colloc.F90  colpnt.F90  cubspl.F90  cwidth.F90  difequ.F90  eqblok.F90  interv.F90  knots.F90  l2appr.F90  l2err.F90  l2knts.F90  l2main.F90  newnot.F90  newnotfake.F90  pppack.F90  pppack.py  ppvalu.F90  putit.F90  pypppack.F90  round.F90  setupq.F90  slvblktext.F90  spli2d.F90  splint.F90  splint2d.F90  splopt.F90  test_pppack.py  (+1 more)
fortran/pppack/tests/: Makefile  main.f90  tests.F90
fortran/quadratures/: CMakeLists.txt  ptpdgl.F90  quadratures.F90  quadratures.rst  quadratures_def.F90  quadratures_line.F90
fortran/quadratures/tests/: CMakeLists.txt  ex1.F90
fortran/space/: CMakeLists.txt  space.F90  space.rst  space_def.F90
fortran/space/tests/: CMakeLists.txt  ex1.F90
fortran/sparse_matrix/: CMakeLists.txt  SparseMatrix3.F90  SparseMatrix4.F90  bnd_matrix.F90  csr_matrix.F90  sparse_matrix.F90  sparse_matrix_def.F90  sparsekit.F90
fortran/sparse_matrix/pot_pourri/: SparseMatrix.F90  SparseMatrix2.F90  smoperations.F90  smout.F90  smtools.F90  tools.F90
fortran/sparse_matrix/tests/: CMakeLists.txt  ex1.F90  ex2.F90  ex3.F90
fortran/utilities/: CMakeLists.txt  quicksort.F90  quicksort.f90
python/: CMakeLists.txt  setup.py.in
